# gad-ff

./: .gitignore  README.md  analyze_gad_results.ipynb  analyze_sella_results.ipynb  cluster.md  environment.yaml  environment.yml  environment_as.yaml  eval.md  fetch_geometries.py  huggingface_sync.md  pyproject.toml  qm9hessian.py  readme.md  requirements.txt  run.sh  setup.py  timing_hessian_transform.py
MLHessian-TSopt/: README.md  mlhessian.md
NewtonNet/: newtonnet.md  pyproject.toml
NewtonNet1/: newtonnet1.md  setup.py
NewtonNet2/: newtonnet2.md  pyproject.toml
RGD1/: draw_violin.py  make_stat_plots.py  parse_data.py  rgd1.md
alphanet/: alphanet_module.py  calculator.py  mul_trainer.py
br_pyGSM/: setup.cfg  setup.py
br_pyGSM/devtools/scripts/: create_conda_env.py
br_pyGSM/docs/: conf.py
br_pyGSM/examples/: ase_api_de_gsm.py  ase_api_example.py
br_pyGSM/pyGSM/: pyGSM.py
br_pyGSM/pyGSM/coordinate_systems/: cartesian.py  delocalized_coordinates.py  internal_coordinates.py  primitive_internals.py  rotate.py  slots.py  topology.py
br_pyGSM/pyGSM/growing_string_methods/: de_gsm.py  gsm.py  main_gsm.py  se_cross.py  se_gsm.py
br_pyGSM/pyGSM/level_of_theories/: ase.py  bagel.py  base_lot.py  dftb.py  file_options.py  molpro.py  nanoreactor_engine.py  openmm.py  orca.py  pdynamo.py  pytc.py  qchem.py  terachem.py  terachemcloud.py  xtb_lot.py
br_pyGSM/pyGSM/molecule/: molecule.py
br_pyGSM/pyGSM/optimizers/: base_optimizer.py  beales_cg.py  conjugate_gradient.py  eigenvector_follow.py  lbfgs.py
br_pyGSM/pyGSM/potential_energy_surfaces/: avg_pes.py  penalty_pes.py  pes.py
br_pyGSM/pyGSM/tests/: test_basic_mecp.py  test_pygsm.py
br_pyGSM/pyGSM/utilities/: block_matrix.py  block_tensor.py  cli_utils.py  elements.py  manage_xyz.py  math_utils.py  nifty.py  options.py  random_quotes.py  units.py
br_pysisyphus/: .pysisyphusrc  setup.cfg
configs/: create_gad_dataset.yaml  create_gad_dataset_composition.yaml  equiformer_v2.yaml  equiformer_v2.yml  train.yaml  train_eigen.yaml
docs/: cluster.md  eigen_dataset.md  horm.md  huggingface_sync.md  rgd1.md  training.md
documentation/: cluster.md  eigen_dataset.md  horm.md  training.md
gadff/: align_ordered_mols.py  align_unordered_mols.py  ani1x.py  checkpointing.py  colours.py  constants.py  dirutils.py  eigen_training_module.py  ema_callback.py  equiformer_ase_calculator.py  equiformer_calculator.py  equiformer_torch_calculator.py  eval_speed.py  find_checkpoint.py  frequency_analysis.py  geodesic_interpolate.py  hessian_eigen.py  inference_utils.py  logging_utils.py  loss_functions.py  lrscheduler.py  newtonnet_ase_calculator.py  path_config.py  plot_molecules.py  rgd1_load_raw.py  t1x_dft_dataloader.py  training_module.py  training_module_eigen.py  training_module_hessian.py  trajectorysaver.py  units.py
geometries/: dft_geometries_status.csv  geometries.csv  natoms_100_cid_117341.sdf  natoms_100_cid_34096.sdf  natoms_100_cid_37268.sdf  natoms_100_cid_37310.sdf  natoms_100_cid_92999.sdf  natoms_30_cid_166.sdf  natoms_30_cid_173.sdf  natoms_30_cid_252.sdf  natoms_30_cid_26.sdf  (+346 more)
(+901 files in other folders)
