[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gadff"
version = "1.0.0"
description = ""
authors = [
    {name = "Andreas Burger", email = "andreas.burger@mail.utoronto.ca"},
]
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    # Core ML
    "torch==2.7.0",
    "torch-geometric==2.7.0",
    "torch-scatter==2.1.2",
    "torch-cluster==1.6.3",
    "torchmetrics==1.8.2",
    "pytorch-lightning==2.5.5",
    "lightning==2.5.1.post0",
    "pytorch-warmup==0.2.0",
    "e3nn==0.5.1",
    "einops==0.8.1",

    # Scientific computing
    "numpy==1.26.4",
    "scipy==1.15.3",
    "scikit-learn==1.7.2",
    "pandas==2.3.3",
    "sympy==1.14.0",
    "networkx==3.4.2",

    # Atomistic simulation
    "ase==3.26.0",
    "rdkit==2025.9.1",
    "pyscf==2.11.0",
    #"pyscf-dispersion==1.3.0",
    #"gpu4pyscf-cuda12x==1.5.2",
    "openbabel-wheel==3.1.1.22",
    "qcelemental==0.29.0",
    "rmsd==1.6.4",
    "pubchempy==1.0.5",
    "geometric==1.1",

    # DFT tight-binding
    #"dxtb==0.3.0",
    #"tad-dftd3==0.5.0",
    #"tad-dftd4==0.7.0",
    #"tad-libcint==0.2.0",
    #"tad-mctc==0.5.3",
    #"tad-multicharge==0.3.3",

    # JAX / GPU
    #"jax==0.6.2",
    #"cupy-cuda12x==13.6.0",

    # Data / IO
    "h5py==3.15.1",
    "lmdb==1.5.1",
    "datasets==4.4.1",
    "kagglehub==0.3.13",
    "pyyaml==6.0.3",
    "pydantic==2.11.4",

    # Hydra config
    "hydra-core>=1.3.*",
    "hydra-submitit-launcher==1.2.0",
    "omegaconf",
    "submitit==1.5.3",

    # Visualization
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
    "plotly==6.3.1",
    "py3dmol==2.5.0",
    "nglview==4.0",
    "pillow==12.0.0",

    # Jupyter / Dev
    "jupyterlab==4.4.10",
    "ipykernel==7.1.0",
    "ipython==8.37.0",
    "ipywidgets==8.1.8",

    # Testing / Linting
    "pytest==8.4.2",
    "pytest-timeout==2.4.0",
    "ruff==0.14.3",

    # Misc
    "wandb==0.21.0",
    "selenium==4.38.0",
    "tqdm==4.67.1",
    "progressbar==2.5",
]

[tool.setuptools.packages.find]
include = ["gadff*", "nets*", "ocpmodels*", "alphanet*", "leftnet*", "recipes*", "scripts*"]

[tool.ruff]
lint.ignore = ["F541"]

[tool.uv.override]
antlr4-python3-runtime = "4.9.2"

[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]
torch-scatter = ["torch"]
