# Helper file to handle all configs

# setuptools configuration.
# see https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
# Self-descriptive entries which should always be present
name = pyGSM
author = Cody Aldaz
author_email = codyaldaz@gmail.com
description = Reaction path and photochemistry tool
long_description = file: README.md
long_description_content_type = "text/markdown"
version = attr: pyGSM.__version__
license = MIT
python_requires = ">=3.7"
# See https://pypi.org/classifiers/
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3


[aliases]
test = pytest
